null safe changes