@@ -290,12 +290,12 @@ public class Calculator extends Application {
 
             } else if (sMatch || currentEval.equals("") && Objects.equals(symbol, "-")) {
 
-                List<String> checkList = logic.getHistory().stream().filter(smith -> Objects.equals(smith, "")).collect(Collectors.toList());
+                //List<String> checkList = logic.getHistory().stream().filter(smith -> Objects.equals(smith, "")).toList();
 
-                if (checkList.size() == 0) {
+                //if (checkList.size() == 0) {
                     label.setText(symbol + currentEval);
                     setCurrentOperation(symbol);
-                }
+                //}
 
             } else {
                 label.setText("INVALID INPUT");
